# CPSO-CPlus

./: CMakeLists.txt  main.cpp
components/: data_types.h
components/cpso optimizations/: optimizer.cpp  optimizer.h
components/data loader/: data_loader.cpp  data_loader.h  data_provider.cpp  data_provider.h
components/neural net/: NeuralNetwork.cpp  NeuralNetwork.h
